Bug 1052090 - Don't try to compute main-thread-ness until after we're done with cancel shenanigans. r=bkelly